完成登录、注册、验证码接口
