# docs/swagger.json
@@ -5,15 +5,19 @@
         "license": {}
     },
     "paths": {
-        "/register": {
+        "/login": {
             "post": {
+                "description": "请登录后将token放在请求头上",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "注册用户",
+                "tags": [
+                    "用户接口"
+                ],
+                "summary": "用户登录",
                 "parameters": [
                     {
-                        "description": "Username",
+                        "description": "用户名",
                         "name": "username",
                         "in": "body",
                         "required": true,
@@ -22,7 +26,46 @@
                         }
                     },
                     {
-                        "description": "Password",
+                        "description": "用户密码",
+                        "name": "password",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/app.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/register": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "用户接口"
+                ],
+                "summary": "注册用户",
+                "parameters": [
+                    {
+                        "description": "用户名",
+                        "name": "username",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "密码",
                         "name": "password",
                         "in": "body",
                         "required": true,
@@ -30,6 +73,51 @@
                             "type": "string"
                         }
                     },
+                    {
+                        "description": "手机号",
+                        "name": "telephone",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "description": "验证码",
+                        "name": "code",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/app.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/app.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/sendCode/register": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "短信接口"
+                ],
+                "summary": "发送注册短信验证码",
+                "parameters": [
                     {
                         "description": "Telephone",
                         "name": "telephone",
@@ -69,6 +157,9 @@
                 },
                 "msg": {
                     "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
                 }
             }
         }
