# models/user.go
@@ -2,6 +2,7 @@ package models
 
 import (
 	"github.com/jinzhu/gorm"
+	"github.com/speanut-land/gdou-server/pkg/e"
 	"regexp"
 )
 
@@ -19,7 +20,7 @@ type User struct {
 */
 func ExistUserByName(name string) (bool, error) {
 	var user User
-	err := db.Where("username = ?", name).First(&user).Error
+	err := db.Select("id").Where("username = ?", name).First(&user).Error
 	if err != nil && err != gorm.ErrRecordNotFound {
 		return false, err
 	}
@@ -43,39 +44,43 @@ func AddUser(username string, password string, telephone string) error {
 	return nil
 }
 
-//TODO 增加工具类
+//判断用户能否登录
+func CheckLogin(username string, password string) (bool, error) {
+	var user User
+	err := db.Select("id").Where(User{Username: username, Password: password}).First(&user).Error
+	if err != nil && err != gorm.ErrRecordNotFound {
+		return false, err
+	}
+
+	if user.ID > 0 {
+		return true, nil
+	}
+
+	return false, nil
+}
 
 //电话号码是否可用
 /*
 	1.电话号码是否符合规则
 	2.是否存在相同的电话号码
 */
-func IsTelephoneUsable(phone string) (bool, error) {
+func IsTelephoneUsable(phone string) int {
 	reg := `^1([38][0-9]|14[579]|5[^4]|16[6]|7[1-35-8]|9[189])\d{8}$`
 	rgx := regexp.MustCompile(reg)
 	isPassReg := rgx.MatchString(phone)
 
 	if isPassReg {
 		var user User
-		err := db.Where("telephone = ?", phone).First(&user).Error
+		err := db.Select("id").Where("telephone = ?", phone).First(&user).Error
 		if err != nil && err != gorm.ErrRecordNotFound {
-			return false, err
+			return e.ERROR
+		}
+		if err == gorm.ErrRecordNotFound {
+			return 0
 		}
 		if user.ID > 0 {
-			return true, nil
+			return e.ERROR_TELEPHONE_USED
 		}
 	}
-	return false, nil
-}
-
-//用户密码是否可用
-/*
-	1.查询用户密码是否不少于6位
-*/
-func IsPasswordUsable(password string) bool {
-	length := len(password)
-	if length >= 6 {
-		return true
-	}
-	return false
+	return e.ERROR_TELEPHONE_FORMAT
 }
