# routers/router.go
@@ -4,6 +4,7 @@ import (
 	"github.com/gin-gonic/gin"
 	_ "github.com/speanut-land/gdou-server/docs"
 	"github.com/speanut-land/gdou-server/routers/api"
+	"github.com/speanut-land/gdou-server/routers/api/sendcode"
 	"github.com/swaggo/gin-swagger"
 	"github.com/swaggo/gin-swagger/swaggerFiles"
 )
@@ -12,7 +13,13 @@ func InitRouter() *gin.Engine {
 	r := gin.New()
 	r.Use(gin.Logger())
 	r.Use(gin.Recovery())
-	r.POST("/register", api.Register)
+
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
+	r.POST("/register", api.Register)
+	r.POST("/login", api.Login)
+	sendCode := r.Group("/sendCode")
+	{
+		sendCode.POST("/register", sendcode.Register)
+	}
 	return r
 }
